# Bacteria_simulation

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp  simulator.cpp  simulator.h
dependencies/: CMakeLists.txt
dependencies/imgui-sfml/: CMakeLists.txt
src/: Bacteria_simulation.code-workspace  bacteria.cpp  bacteria.h  field.cpp  field.h  render.cpp  render.h
src/ui/: field_renderer.cpp
